modify to java 1.8